--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - uses: actions/setup-haskell@v1.1
+      - uses: haskell/actions/setup@v2
         with:
           ghc-version: ${{ matrix.ghc }}
           cabal-version: ${{ matrix.cabal }}
@@ -37,7 +37,7 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            ghc: '8.10'
+            ghc: '8.8'
             cabal: '3.0'
 
   # Single deploy job since we're just deploying
