--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -42,7 +42,7 @@ jobs:
           ghc-version: ${{ matrix.ghc }}
           cabal-version: ${{ matrix.cabal }}
       - name: Build docs
-        run: echo "DOCDIR=$(dirname $(cabal v2-haddock --haddock-all | tail -1))" >> $GITHUB_ENV
+        run: echo "DOCDIR=$(dirname $(./build-docs))" >> $GITHUB_ENV
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
