--- a/mut.cabal
+++ b/mut.cabal
@@ -15,4 +15,4 @@ executable mut
   build-depends:      base >=4.13 && <4.14
   default-language:   Haskell2010
   ghc-options:        -Wall
-  hs-source-dirs:     src, src/functions
+  hs-source-dirs:     .,src,src/functions
