--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -45,6 +45,8 @@ jobs:
         with:
           ghc-version: ${{ matrix.ghc }}
           cabal-version: ${{ matrix.cabal }}
+      - name: Build app
+        run: cabal build
       - name: Build docs
         run: >
           ./bin/build-docs.sh | tee docdir.txt;
