--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Build docs
         run: >
           ./bin/build-docs.sh | tee docdir.txt;
-          echo "DOCDIR=$(cat docdir.txt | tail -1)" >> $GITHUB_ENV;
+          echo "DOCDIR=$(basedir $(cat docdir.txt | tail -1))" >> $GITHUB_ENV;
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
