--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,6 +3,8 @@ name: Deploy static content to Pages
 
 on:
   # Runs on pushes targeting the default branch
+  pull_request:
+    branches: ["main"]
   push:
     branches: ["main"]
     paths:
@@ -12,6 +14,10 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
+env:
+  CAN_DEPLOY: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -35,7 +41,8 @@ jobs:
             ghc: '8.8'
             cabal: '3.2'
     environment:
-      name: github-pages
+
+      name: ${{ env.CAN_DEPLOY && github-pages || not-github-pages }}
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
