--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,8 +3,6 @@ name: Deploy static content to Pages
 
 on:
   # Runs on pushes targeting the default branch
-  pull_request:
-    branches: ["main"]
   push:
     branches: ["main"]
     paths:
@@ -14,11 +12,6 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-env:
-  CAN_DEPLOY: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-  ENV_NAME: ${{ env.CAN_DEPLOY && github-pages || not-github-pages }}
-
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -33,7 +26,30 @@ concurrency:
 
 jobs:
   # Single deploy job since we're just deploying
+  setup:
+    runs-on: ubuntu-latest
+    outputs:
+      var1: ${{ steps.set-variable.outputs.test }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set test variable
+        id: set-variable
+        run: |
+          if [ ${{ github.ref }} == 'refs/heads/main' -a ${{ github.event_name }} == 'push' ]; then
+            echo "IS PUSH TO MAIN"
+            echo "::set-output name=test::github-pages"
+          else
+            echo "ISN'T PUSH TO MAIN"
+            echo "::set-output name=test::something-else"
+          fi
+        shell: bash
+      - name: Read exported variable
+        run: |
+          echo "OUTPUT: ${{ steps.check.test-env.test }}"
+
+
   deploy:
+    needs: [setup]
     strategy:
       fail-fast: true
       matrix:
@@ -41,8 +57,8 @@ jobs:
           - os: ubuntu-latest
             ghc: '8.8'
             cabal: '3.2'
-    env:
-      name: ${{ env.ENV_NAME }}
+    environment:
+      name: ${{ needs.setup.outputs.var1 }}
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
