--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -15,9 +15,6 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-env:
-  CAN_DEPLOY: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
@@ -31,29 +28,7 @@ concurrency:
 
 jobs:
   # Single deploy job since we're just deploying
-  setup:
-    runs-on: ubuntu-latest
-    outputs:
-      var1: ${{ steps.set-variable.outputs.test }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set test variable
-        id: set-variable
-        run: |
-          echo ${{ env.CAN_DEPLOY }}
-          if [ ${{ env.CAN_DEPLOY }} ]; then
-            echo "IS PUSH TO MAIN"
-            echo "{test}={github-pages}" >> $GITHUB_STATE
-          else
-            echo "ISN'T PUSH TO MAIN"
-            echo "{test}={something-else}" >> $GITHUB_STATE
-          fi
-        shell: bash
-      - name: Read exported variable
-        run: |
-          echo "OUTPUT: ${{ steps.check.test-env.test }}"
   build:
-    needs: [setup]
     strategy:
       fail-fast: true
       matrix:
@@ -83,7 +58,8 @@ jobs:
           path: ${{ env.DOCDIR }}
   deploy:
     runs-on: ubuntu-latest
-    if: ${{ env.CAN_DEPLOY }}
+    needs: [build]
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     environment:
       name: ${{ needs.setup.outputs.var1 }}
       url: ${{ steps.deployment.outputs.page_url }}
