--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,8 +38,6 @@ jobs:
             cabal: '3.2'
     runs-on: ubuntu-latest
     steps:
-      - name: What's our env?
-        run: echo ${{ needs.setup.outputs.var1}}
       - name: Checkout
         uses: actions/checkout@v3
       - uses: haskell/actions/setup@v2
@@ -50,12 +48,12 @@ jobs:
         run: >
           ./bin/build-docs.sh | tee docdir.txt;
           echo "DOCDIR=$(dirname $(cat docdir.txt | tail -1))" >> $GITHUB_ENV;
-      - name: Build the app
-        run: cabal build
       - uses: actions/upload-artifact@v2
         with:
           name: built-docs
           path: ${{ env.DOCDIR }}
+      - name: Run it
+        run: cabal run
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
