--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -50,7 +50,7 @@ jobs:
         name: Build docs
         run: >
           ./bin/build-docs.sh | tee docdir.txt;
-          echo "{docdir}=$(dirname $(cat docdir.txt | tail -1)" >> $GITHUB_OUTPUT
+          echo "{docdir}=$(dirname $(cat docdir.txt | tail -1))" >> $GITHUB_OUTPUT
       - uses: actions/upload-artifact@v2
         with:
           name: built-docs
