--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -50,12 +50,12 @@ jobs:
         name: Build docs
         run: >
           ./bin/build-docs.sh | tee docdir.txt;
-          echo "{docdir}=$(dirname $(cat docdir.txt | tail -1))" >> $GITHUB_OUTPUT
-      - run: echo ${{ toJSON(steps.buildstep.outputs[0]) }}
+          echo "docdir=$(dirname $(cat docdir.txt | tail -1))" >> $GITHUB_OUTPUT
+      - run: echo ${{ toJSON(steps.buildstep.outputs.docdir) }}
       - uses: actions/upload-artifact@v2
         with:
           name: built-docs
-          path: ${{ steps.buildstep.outputs[0] }}
+          path: ${{ steps.buildstep.outputs.docdir }}
       - name: Run it
         run: cabal run
   deploy:
