--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -46,12 +46,15 @@ jobs:
         with:
           ghc-version: ${{ matrix.ghc }}
           cabal-version: ${{ matrix.cabal }}
+      # Run the build docs command
+      # Tee it - showing the output both to stdout and to the file "docdir.txt"
+      # Set the output of this step equal to the directory returned
+      # Also make sure the build-docs command returns 0
       - id: buildstep
         name: Build docs
         run: >
-          ./bin/build-docs.sh | tee docdir.txt;
+          ./bin/build-docs.sh | tee docdir.txt; test ${PIPESTATUS[0]} -eq 0
           echo "docdir=$(dirname $(cat docdir.txt | tail -1))" >> $GITHUB_OUTPUT
-      - run: echo ${{ toJSON(steps.buildstep.outputs.docdir) }}
       - uses: actions/upload-artifact@v2
         with:
           name: built-docs
