--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,5 +1,5 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Build docs with Haddock, and in pushes to `main`, deploy to Pages
 
 on:
   # Runs on pushes targeting the default branch
@@ -26,16 +26,16 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
-env:
-  os: ubuntu-latest
-  ghc: 8.8
-  cabal: 3.2
-
-
 jobs:
   # Single deploy job since we're just deploying
   build:
-    runs-on: ${{ env.os }}
+    strategy:
+      fail-fast: true
+      matrix:
+          os: [ubuntu-latest]
+          ghc: ['8.8']
+          cabal: ['3.2']
+    runs-on: ubuntu-latest
     outputs:
       docdir: ${{ steps.buildstep.outputs.docdir }}
     steps:
@@ -43,8 +43,8 @@ jobs:
         uses: actions/checkout@v3
       - uses: haskell/actions/setup@v2
         with:
-          ghc-version: ${{ env.ghc }}
-          cabal-version: ${{ env.cabal }}
+          ghc-version: ${{ matrix.ghc }}
+          cabal-version: ${{ matrix.cabal }}
       # Run the build docs command
       # Tee it - showing the output both to stdout and to the file "docdir.txt"
       # Set the output of this step equal to the directory returned
@@ -62,7 +62,7 @@ jobs:
       - name: Run it
         run: cabal run
   deploy:
-    runs-on: ${{ env.os }}
+    runs-on: ubuntu-latest
     needs: [build]
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     environment:
