--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -26,9 +26,6 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
-env:
-  os: ubuntu-latest
-
 jobs:
   # Single deploy job since we're just deploying
   build:
@@ -38,7 +35,7 @@ jobs:
         includes:
           - ghc: '8.8'
             cabal: '3.2'
-    runs-on: ${{ env.os }}
+    runs-on: ubuntu-latest
     outputs:
       docdir: ${{ steps.buildstep.outputs.docdir }}
     steps:
@@ -65,7 +62,7 @@ jobs:
       - name: Run it
         run: cabal run
   deploy:
-    runs-on: ${{ env.os }}
+    runs-on: ubuntu-latest
     needs: [build]
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     environment:
