--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,5 +1,5 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Build docs with Haddock, and in pushes to `main`, deploy to Pages
+name: Deploy static content to Pages (or just build if not pushing to `main`)
 
 on:
   # Runs on pushes targeting the default branch
@@ -32,11 +32,10 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        includes:
-          - os: ubuntu-latest
-            ghc: '8.8'
+        include:
+          - ghc: '8.8'
             cabal: '3.2'
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     outputs:
       docdir: ${{ steps.buildstep.outputs.docdir }}
     steps:
@@ -46,18 +45,11 @@ jobs:
         with:
           ghc-version: ${{ matrix.ghc }}
           cabal-version: ${{ matrix.cabal }}
-      # Run the build docs command
-      # Tee it - showing the output both to stdout and to the file "docdir.txt"
-      # Set the output of this step equal to the directory returned
-      # Also make sure the build-docs command returns 0
-      - name: Cabal Update
-        run: cabal update
       - id: buildstep
         name: Build docs
         run: >
           ./bin/build-docs.sh | tee docdir.txt;
-          test ${PIPESTATUS[0]} -eq 0;
-          echo "docdir=$(dirname $(cat docdir.txt | tail -1))" >> $GITHUB_OUTPUT;
+          echo "docdir=$(dirname $(cat docdir.txt | tail -1))" >> $GITHUB_OUTPUT
       - uses: actions/upload-artifact@v2
         with:
           name: built-docs
