Testing pipe output

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -49,7 +49,8 @@ jobs:
         name: Build docs
         run: >
           ./bin/build-docs.sh | tee docdir.txt;
-          echo "docdir=$(dirname $(cat docdir.txt | tail -1))" >> $GITHUB_OUTPUT
+          test ${PIPESTATUS[0]} -eq 0;
+          echo "docdir=$(dirname $(cat docdir.txt | tail -1))" >> $GITHUB_OUTPUT;
       - uses: actions/upload-artifact@v2
         with:
           name: built-docs
