--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -51,10 +51,18 @@ jobs:
           ./bin/build-docs.sh | tee docdir.txt;
           test ${PIPESTATUS[0]} -eq 0;
           echo "docdir=$(dirname $(cat docdir.txt | tail -1))" >> $GITHUB_OUTPUT;
-      - uses: actions/upload-artifact@v2
+      - name: Upload docs for next step
+        uses: actions/upload-artifact@v2
         with:
-          name: built-docs
+          name: ${{ github.sha }}-docs
           path: ${{ steps.buildstep.outputs.docdir }}
+      - name: Run the thing
+        run: cabal run
+      - name: Upload output file for next step
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ github.sha }}-output
+          path: ./output.md
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
@@ -65,7 +73,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v2
         with:
-          name: built-docs
+          name: ${{ github.sha }}-docs
           path: ./built-docs
       - name: Setup Pages
         uses: actions/configure-pages@v2
@@ -76,3 +84,21 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+  deploy-markdown:
+    runs-on: ubuntu-latest
+    needs: [build]
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    steps:
+      - name: Download the output artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: ${{ github.sha }}-output
+          path: ./output.md
+      - name: Add and commit new files
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add ./output.md -f
+          git commit -m "Deployment"
+          git push origin `git subtree split --prefix ./output.md main`:output --force
+	
