--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -95,10 +95,10 @@ jobs:
           name: ${{ github.sha }}-output
           path: ./output.md
       - name: Add and commit new files
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add ./output.md -f
-          git commit -m "Deployment"
-          git push origin `git subtree split --prefix ./output.md main`:output --force
+        run: >
+          git config user.name github-actions;
+          git config user.email github-actions@github.com;
+          git add ./output.md -f;
+          git commit -m "Deployment";
+          git push origin `git subtree split --prefix ./output.md main`:output --force;
 	
