--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -94,7 +94,8 @@ jobs:
         with:
           name: ${{ github.sha }}-output
           path: ./output.md
-      - name: Add and commit new files
+      - id: pushstep
+        name: Push
         run: >
           git config user.name github-actions;
           git config user.email github-actions@github.com;
