--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -93,7 +93,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: ${{ github.sha }}-output
-          path: ./output.md
+          path: .
       - name: Push to output branch
         run: >
           git config user.name github-actions;
