--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -89,6 +89,8 @@ jobs:
     needs: [build]
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Download the output artifact
         uses: actions/download-artifact@v2
         with:
