--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -98,8 +98,9 @@ jobs:
           path: .
       - name: Push to output branch
         run: >
+          mv output.md README.md
           git config user.name github-actions;
           git config user.email github-actions@github.com;
-          git add ./output.md -f;
+          git add ./README.md -f;
           git commit -m "Deployment";
-          git push origin `git subtree split --prefix ./output.md main`:output --force;
+          git push origin `git subtree split --prefix ./README.md main`:output --force;
