--- a/mut.cabal
+++ b/mut.cabal
@@ -10,7 +10,7 @@ build-type:           Simple
 
 executable mut
   main-is:            Main.hs
-  other-modules:      CalculatedData, Data, Data.Teams, Type, Functions.Application, Functions.Domain, Functions.Display
+  other-modules:      Data.Calculated, Data.Squad, Data.Teams, Type, Functions.Application, Functions.Domain, Functions.Display
   build-depends:      base ==4.13.*
   default-language:   Haskell2010
   ghc-options:        -Wall
