--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -56,6 +56,9 @@ jobs:
         with:
           name: ${{ github.sha }}-docs
           path: ${{ steps.buildstep.outputs.docdir }}
+      - name: Hlint
+        run: hlint src
+        continue-on-error: true
       - name: Run the thing
         run: cabal run
       - name: Upload output file for next step
