--- a/mut.cabal
+++ b/mut.cabal
@@ -14,4 +14,5 @@ executable mut
   build-depends:      base ==4.13.*
   default-language:   Haskell2010
   ghc-options:        -Wall
-  hs-source-dirs:     src, src/Functions
+  hs-source-dirs:     src
+  default-extensions: TupleSections
