--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -77,11 +77,13 @@ jobs:
       - name: Add commit comment if PR
         if: ${{ github.event_name == 'pull_request' }}
         run: |
+          URL="https://api.github.com/repos/$GITHUB_REPOSITORY/commits/$GITHUB_SHA/comments"
+          echo $URL
           jq -nc "{\"body\": \"$(cat output.md)\"}" | \
           curl -sL -X POST -d @- \
             -H "Content-Type: application/json" \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/repos/$GITHUB_REPOSITORY/commits/$GITHUB_SHA/comments"
+            $URL
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
