context --> github.event

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Add commit comment if PR
         if: ${{ github.event_name == 'pull_request' }}
         run: |
-          URL="/repos/${{ context.repo.owner }}/${{ context.repo.repo }}/pulls/$PR_NUMBER"
+          URL="/repos/${{ github.event.repo.owner }}/${{ github.event.repo.repo }}/pulls/$PR_NUMBER"
           echo $URL
           gh api \
             --method PATCH \
