--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -21,6 +21,9 @@ permissions:
   pages: write
   id-token: write
 
+env:
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 # Allow one concurrent deployment
 concurrency:
   group: "pages"
