--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -16,10 +16,7 @@ on:
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: write
-  pages: write
-  id-token: write
+permissions: write-all
 
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
