--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -119,11 +119,11 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: ${{ github.sha }}-output
-          path: .
+          path: ./output
       - name: Push to built branch
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add output.md -f
           git commit -m "Deploy built file"
-          git push origin `git subtree split --prefix . main`:output/built --force
+          git push origin `git subtree split --prefix output main`:output/built --force
