--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -91,7 +91,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
-    if: ${{ env.IS_MAIN_PUSH }}
+    if: $IS_MAIN_PUSH
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -113,7 +113,7 @@ jobs:
   put_file_in_branch:
     runs-on: ubuntu-latest
     needs: [build]
-    if: ${{ env.IS_MAIN_PUSH }}
+    if: $IS_MAIN_PUSH
     steps:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v2
