--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -21,7 +21,6 @@ permissions: write-all
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   URL: /repos/${{ github.event.pull_request.head.repo.owner.login }}/${{ github.event.pull_request.head.repo.name }}/issues/${{ github.event.pull_request.number }}/comments
-  IS_MAIN_PUSH: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
 
 # Allow one concurrent deployment
 concurrency:
@@ -91,7 +90,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
-    if: ${{ env.IS_MAIN_PUSH }}
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -113,7 +112,7 @@ jobs:
   put_file_in_branch:
     runs-on: ubuntu-latest
     needs: [build]
-    if: ${{ env.IS_MAIN_PUSH }}
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v2
